@@ -1,3 +1,7 @@
+2008-11-26  Albert Chu <chu11@llnl.gov>
+
+	* ipmimonitoring/: Additional documentation updates.
+	
 2008-11-25  Albert Chu <chu11@llnl.gov>
 
 	* ipmimonitoring/ipmi_monitoring_sensors.conf.5.pre.in,
